# rex

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
include/rex/: ast.hpp  parser.hpp
src/: parser.cpp
tests/: test_parser.cpp  test_parser_grammar.cpp
